# cmakebyexample.jcbhmr.com

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  book.toml  mdbook-test-cmake.cpp  next.config.js  package-lock.json  package.json  task.cmake
.devcontainer/: devcontainer.json  updateContentCommand.sh
.devcontainer/hello-world/: devcontainer.json
.devcontainer/logging/: devcontainer.json
.github/workflows/: mdbook.yml
_examples/: hello-world.md  logging.md
_examples/src/cosmocc-toolchain/: main.c
_examples/src/cosmocc-toolchain/cmake/: cosmocc-override.cmake
_examples/src/logging/: CMakeLists.txt
_examples/src/scripts/: cat.cmake
_examples/src/set-c-cxx-standard/: README.md  main2.cpp
_examples/src/set-c-cxx-standard/cmake/: clang-18.cmake
_examples/src/zig-toolchain/: main.c
_examples/src/zig-toolchain/cmake/: zig-wasm32-wasi-musl.cmake  zig-x86_64-linux-musl.cmake  zig-x86_64-macos-none.cmake  zig-x86_64-windows-gnu.cmake
cmake/: generate.cmake
listings/01-executable/: CMakeLists.txt  output.txt
listings/02-library/: CMakeLists.txt  output.txt
listings/02-library/include/: greeter.h
listings/02-library/src/: lib.c
listings/03-variables/: CMakeLists.txt  output.txt
listings/03-variables/src/: main.c  stats.c  stats.h
listings/04-control-flow/: CMakeLists.txt  output.txt
listings/05-set-c-cxx-standard/: CMakeLists.txt  output.txt
pages/: _meta.js  hello-world.mdx  index.mdx
scripts/: generate-highlightjs.sh  rename-page.sh  test.sh  update-cmake_minimum_required.sh
src/: 01-executable.md  02-library.md  03-variables.md  04-control-flow.md  05-set-c-cxx-standard.md  README.md  SUMMARY.md  hello-world.md  index.md  values.md
src/cosmocc-toolchain/: CMakeLists.txt  README.md
src/cosmocc-toolchain/cmake/: cosmocc.cmake
src/hello-world/: .devcontainer.json  CMakeLists.txt  README.md  main.c  run
src/logging/: README.md  main.c
src/scripts/: README.md  raven.txt
src/set-c-cxx-standard/: CMakeLists.txt  main1.c
src/values/: CMakeLists.txt
src/zig-toolchain/: CMakeLists.txt  README.md  README.md.skip  main.c
src/zig-toolchain/cmake/: zig-aarch64-linux-musl.cmake  zig-aarch64-macos-none.cmake
testdata/: export-math.cpp  hello-format.cpp  hello-import-std.cpp  hello-println.cpp  zpipe.c
testdata/include/: poetry.h
testdata/poetry/: a_visit_from_st_nicholas.c  lauch_and_be_merry.c  the_raven.c
theme/: highlight.js
